[package]
name = "conventional_commits"
description = "A lightweight parser following the conventional commit standards"
version = "0.1.1"
license = "MIT"
edition = "2021"
author = "Shubham singh	<github: github.com/shubhexists>"
repository = "https://github.com/shubhexists/conventional_commits"
categories = ["development-tools", "compilers"]
keywords = ["parser", "commit", "conventional_commit", "lexer", "dev-tools"]
readme = "README.md"